[package]
name = "hyper-rs-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
rustls = "0.18"
hyper-rustls = "0.21.0"
futures-util = "0.3.1"
tokio-rustls = "0.14.0"
